# docs/swagger.yaml
@@ -242,6 +242,7 @@ paths:
             schema:
               $ref: '#/components/schemas/AddCardRequest'
             example:
+              kost_id: "6f89a499-3018-45f0-b90f-9906f4c77cca"
               lock_id: "123456789"
               card_number: "1550390851"
               card_name: "Kartu Tamu"
@@ -404,8 +405,12 @@ components:
           description: End time in milliseconds since epoch
     AddCardRequest:
       type: object
-      required: [lock_id, card_number, start_at, end_at]
+      required: [kost_id, lock_id, card_number, start_at, end_at]
       properties:
+        kost_id:
+          type: string
+          format: uuid
+          description: Kost ID for resolving TTLock credentials
         lock_id:
           type: string
           description: Lock ID (numeric string)
@@ -426,6 +431,9 @@ components:
       properties:
         created:
           type: boolean
+        kost_id:
+          type: string
+          format: uuid
         lock_id:
           type: integer
           format: int64
